--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,17 +22,17 @@
     <!-- sidebar -->
     <aside class="sidebar">
         <div class="top_logo">
-            <a href="index.html">
+            <a th:href="@{/}">
                 <h1>WINDSOME</h1>
             </a>
         </div>
         <div class="top_nav">
             <ul>
                 <li>
-                    <a href="login.html">LOGIN</a>
+                    <a th:href="@{/login}">LOGIN</a>
                 </li>
                 <li>
-                    <a href="join.html">JOIN</a>
+                    <a th:href="@{/sign-up}">JOIN</a>
                 </li>
                 <li>
                     <a href="cart.html">CART</a>
@@ -155,13 +155,13 @@
             <div class="menu">
                 <ul class="menu_link">
                     <li>
-                        <a href="login.html">Login</a>
+                        <a th:href="@{/login}">Login</a>
                     </li>
                     <li>
-                        <a href="index.html">My Account</a>
+                        <a>My Account</a>
                         <div class="account_menu">
                             <ul>
-                                <li><a href="join.html">Join</a></li>
+                                <li><a th:href="@{/sign-up}">Join</a></li>
                                 <li><a href="mypage.html">Mypage</a></li>
                                 <li><a href="orderlist.html">Order Check</a></li>
                                 <li><a href="wishlist.html">Wish List</a></li>
