[FEAT] - SignUp form validation

--- a/src/main/resources/static/css/sign-up.css
+++ b/src/main/resources/static/css/sign-up.css
@@ -339,7 +339,7 @@ main .content #signup .signup .signup_body form table tbody td span.mail_input_r
 main .content #signup .signup .signup_body form table tbody td span.final_id_ck,
 main .content #signup .signup .signup_body form table tbody td span.final_pw_ck,
 main .content #signup .signup .signup_body form table tbody td span.final_pwck_ck,
-main .content #signup .signup .signup_body form table tbody td span.final_name_ck,
+main .content #signup .signup .signup_body form table tbody td span.final_nickname_ck,
 main .content #signup .signup .signup_body form table tbody td span.final_mail_ck,
 main .content #signup .signup .signup_body form table tbody td span.final_addr_ck,
 main .content #signup .signup .signup_body form table tbody td span.pwck_input_re_1,
