--- a/src/main/resources/static/css/sign-up.scss
+++ b/src/main/resources/static/css/sign-up.scss
@@ -402,7 +402,7 @@ main {
                                     span.final_id_ck,
                                     span.final_pw_ck,
                                     span.final_pwck_ck,
-                                    span.final_name_ck,
+                                    span.final_nickname_ck,
                                     span.final_mail_ck,
                                     span.final_addr_ck,
                                     span.pwck_input_re_1,
