--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -233,8 +233,12 @@
             $('nav').css('opacity', '.6');
     });
 </script>
-
 <!-- 사용자 JS -->
-<th:block layout:fragment="script"></th:block>
+<th:block layout:fragment="script">
+
+</th:block>
+
+
+
 </body>
 </html>
