--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,135 +1,145 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{fragments.html}">
-
-<th:block layout:fragment="css">
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head>
+    <div th:replace="fragments.html :: head"></div>
+    <!--  사용자 CSS -->
     <link rel="stylesheet" href="css/index.css">
-</th:block>
+</head>
+<body>
 
-<th:block layout:fragment="content">
-    <!-- items section -->
-    <section id="items">
-        <div class="section_content">
-            <div class="container-fluid items">
-                <div class="items_header">
-                    <h2>ALL ITEMS</h2>
-                    <div class="divider"></div>
-                </div>
-                <div class="items_body">
-                    <div class="row g-2">
-                        <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
-                            <a href="item.html">
-                                <img src="imgs/1.jpg" class="img-fluid" alt="">
-                            </a>
-                            <div class="desc">
-                                <div class="name">
-                                    <a href="item.html">S. Raton Wool Jacket</a>
-                                </div>
-                                <div class="price">
-                                    <span>94,050원</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
-                            <a href="item.html">
-                                <img src="imgs/2.jpg" class="img-fluid" alt="">
-                            </a>
-                            <div class="desc">
-                                <div class="name">
-                                    <a href="item.html">S. Raton Wool Jacket</a>
-                                </div>
-                                <div class="price">
-                                    <span>94,050원</span>
+<main>
+    <div th:replace="fragments.html :: sidebar"></div>
+
+    <article class="content">
+        <div th:replace="fragments.html :: nav"></div>
+
+        <!-- items section -->
+        <section id="items">
+            <div class="section_content">
+                <div class="container-fluid items">
+                    <div class="items_header">
+                        <h2>ALL ITEMS</h2>
+                        <div class="divider"></div>
+                    </div>
+                    <div class="items_body">
+                        <div class="row g-2">
+                            <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
+                                <a href="item.html">
+                                    <img src="imgs/1.jpg" class="img-fluid" alt="">
+                                </a>
+                                <div class="desc">
+                                    <div class="name">
+                                        <a href="item.html">S. Raton Wool Jacket</a>
+                                    </div>
+                                    <div class="price">
+                                        <span>94,050원</span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
-                            <a href="item.html">
-                                <img src="imgs/3.jpg" class="img-fluid" alt="">
-                            </a>
-                            <div class="desc">
-                                <div class="name">
-                                    <a href="item.html">S. Raton Wool Jacket</a>
-                                </div>
-                                <div class="price">
-                                    <span>94,050원</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
-                            <a href="item.html">
-                                <img src="imgs/4.jpg" class="img-fluid" alt="">
-                            </a>
-                            <div class="desc">
-                                <div class="name">
-                                    <a href="item.html">S. Raton Wool Jacket</a>
-                                </div>
-                                <div class="price">
-                                    <span>94,050원</span>
+                            <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
+                                <a href="item.html">
+                                    <img src="imgs/2.jpg" class="img-fluid" alt="">
+                                </a>
+                                <div class="desc">
+                                    <div class="name">
+                                        <a href="item.html">S. Raton Wool Jacket</a>
+                                    </div>
+                                    <div class="price">
+                                        <span>94,050원</span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
-                            <a href="item.html">
-                                <img src="imgs/5.jpg" class="img-fluid" alt="">
-                            </a>
-                            <div class="desc">
-                                <div class="name">
-                                    <a href="item.html">S. Raton Wool Jacket</a>
-                                </div>
-                                <div class="price">
-                                    <span>94,050원</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
-                            <a href="item.html">
-                                <img src="imgs/6.jpg" class="img-fluid" alt="">
-                            </a>
-                            <div class="desc">
-                                <div class="name">
-                                    <a href="item.html">S. Raton Wool Jacket</a>
-                                </div>
-                                <div class="price">
-                                    <span>94,050원</span>
+                            <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
+                                <a href="item.html">
+                                    <img src="imgs/3.jpg" class="img-fluid" alt="">
+                                </a>
+                                <div class="desc">
+                                    <div class="name">
+                                        <a href="item.html">S. Raton Wool Jacket</a>
+                                    </div>
+                                    <div class="price">
+                                        <span>94,050원</span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
-                            <a href="item.html">
-                                <img src="imgs/7.jpg" class="img-fluid" alt="">
-                            </a>
-                            <div class="desc">
-                                <div class="name">
-                                    <a href="item.html">S. Raton Wool Jacket</a>
-                                </div>
-                                <div class="price">
-                                    <span>94,050원</span>
+                            <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
+                                <a href="item.html">
+                                    <img src="imgs/4.jpg" class="img-fluid" alt="">
+                                </a>
+                                <div class="desc">
+                                    <div class="name">
+                                        <a href="item.html">S. Raton Wool Jacket</a>
+                                    </div>
+                                    <div class="price">
+                                        <span>94,050원</span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
-                            <a href="item.html">
-                                <img src="imgs/8.jpg" class="img-fluid" alt="">
-                            </a>
-                            <div class="desc">
-                                <div class="name">
-                                    <a href="item.html">S. Raton Wool Jacket</a>
+                            <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
+                                <a href="item.html">
+                                    <img src="imgs/5.jpg" class="img-fluid" alt="">
+                                </a>
+                                <div class="desc">
+                                    <div class="name">
+                                        <a href="item.html">S. Raton Wool Jacket</a>
+                                    </div>
+                                    <div class="price">
+                                        <span>94,050원</span>
+                                    </div>
                                 </div>
-                                <div class="price">
-                                    <span>94,050원</span>
+                            </div>
+                            <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
+                                <a href="item.html">
+                                    <img src="imgs/6.jpg" class="img-fluid" alt="">
+                                </a>
+                                <div class="desc">
+                                    <div class="name">
+                                        <a href="item.html">S. Raton Wool Jacket</a>
+                                    </div>
+                                    <div class="price">
+                                        <span>94,050원</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
+                                <a href="item.html">
+                                    <img src="imgs/7.jpg" class="img-fluid" alt="">
+                                </a>
+                                <div class="desc">
+                                    <div class="name">
+                                        <a href="item.html">S. Raton Wool Jacket</a>
+                                    </div>
+                                    <div class="price">
+                                        <span>94,050원</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
+                                <a href="item.html">
+                                    <img src="imgs/8.jpg" class="img-fluid" alt="">
+                                </a>
+                                <div class="desc">
+                                    <div class="name">
+                                        <a href="item.html">S. Raton Wool Jacket</a>
+                                    </div>
+                                    <div class="price">
+                                        <span>94,050원</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-</th:block>
+        </section>
 
-<th:block layout:fragment="script">
+        <div th:replace="fragments.html :: footer"></div>
+    </article>
+</main>
 
-</th:block>
-</html>
+<div th:replace="fragments.html :: JS"></div>
+
+<!-- 사용자 JS -->
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+</body>
